instructions.Instructions.scala.error
Compilation error:
Instructions:13: error: identifier expected but '(' found.
e.g.()
    ^